--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -1,40 +1,56 @@
 /* change.css */
-.right-part{
-	background: blue;
-	width:  80%;	
-}
-.top-right-part{
-	background: green;
-}
-article{
-	background-color: yellow;
-}
-#graph{
-	width: 30rem;
-	height: auto;
-}
-.curs-pointer{
-	cursor: pointer; }
+/* dashboard */
+	.right-part{
+		background: blue;
+		width:  80%;	
+	}
+	.top-right-part{
+		background: green;
+	}
+	article{
+		background-color: yellow;
+	}
+	#graph{
+		width: 30rem;
+		height: auto;
+	}
+	.curs-pointer{
+		cursor: pointer; }
 
 
-/*---------------------------------*/
+	/*---------------------------------*/
 
-/*left part*/
-.left-part{
-	width:  20%;	
-	background: red;	
-}
-.photo > img{
-	width:  10rem;
-	height: auto;
-}
-.button-verti{
-	height:  3rem;
-	width: 	10rem;
-	background-color: white;
-}
-.no-a{
-	color: black;
-}
-.no-a:hover{
-	text-decoration : none;}
+	/*left part*/
+	.left-part{
+		width:  20%;	
+		background: red;	
+	}
+	.photo > img{
+		width:  10rem;
+		height: auto;
+	}
+	.button-verti{
+		height:  3rem;
+		width: 	10rem;
+		background-color: white;
+	}
+	.no-a{
+		color: black;
+	}
+	.no-a:hover{
+		text-decoration : none;}
+
+/* connexion*/ 
+	.section-connection{ /*according to clients desires*/	
+		background: linear-gradient(to bottom, rgba(92, 77, 66, 0.5) 0%, 
+			rgba(92, 77, 66, 0.6) 100%), url("../img/fond.png");
+		padding-top: 8rem;
+		padding-bottom: calc(8rem - 56px);
+		background-position: center center;
+		background-size: 70rem; 
+		background-repeat: no-repeat;
+	}
+	.cont-form{
+		width: 30rem;
+		background-color: rgba(255,255,255,0.4)
+	}
