--- a/core/templates/core/nav.html
+++ b/core/templates/core/nav.html
@@ -4,7 +4,10 @@
 		{%load static%}
 		<div class="row">
 			<div class="col-12 text-center photo"><img src="{% static 'img/avatar.png'%}" alt=""></div>
-			<div class="col-12 text-center label-photo">titre photo</div>
+			{% if name%}
+			<div class="col-12 text-center label-photo">Bienvenu {{name}}</div>
+			{% endif%}
+			<div class="col-12 text-center label-photo"><a href="{% url 'user:logout'%}">se déconnecter</a></div>
 		</div>
 	</div>
 	<div class="container">
