--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -54,3 +54,21 @@
 		width: 30rem;
 		background-color: rgba(255,255,255,0.4)
 	}
+
+/* sheet */
+
+	.row1{
+		background-color: gold; }
+	
+	.row2{
+		background-color: grey; }
+
+/* mail */ 
+	.mail-but{
+		height: 5rem; 
+	}
+	.very-center{
+		display: flex; 
+		justify-content: center; 
+		align-content: center; 
+		}
