--- a/core/templates/core/nav.html
+++ b/core/templates/core/nav.html
@@ -13,8 +13,8 @@
 	<div class="container">
 		<div class="row">
 		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center"><a class="no-a" href="{% url 'dashboard:index' %}">Tableau de board</a></div>
-		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'sheet:index' %}">Fiche</a></div>
-		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'mail:index' %}">Mail</a></div>
+		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'sheet:index' %}">Fiches</a></div>
+		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'mail:index' %}">Mails</a></div>
 		<div class=" col-12 text-center button-verti mb-5 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'info:index' %}">Informations</a>	</div>
 		</div>
 	</div>
