--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -1,6 +1,5 @@
 {% extends 'core/base.html' %}
 {% block content %}
-{% load static %}
 <section>
 	<h2 class="mt-5 pl-5">Page Fiches</h2>
 	<article class="mt-5 container">
@@ -9,7 +8,12 @@
 			<div class="col-2"></div>
 			{% for elem in button_value %}
 			<div class="col-2 bg-primary text-center">
-				<button >{{elem}}</button>
+				{% if elem.name == "ajouter"%}
+				<button id="{{elem.id}}" onclick="add()">{{elem.name}}</button>
+				{% else%}
+				<button id="{{elem.id}}">{{elem.name}}</button>
+				{% endif%}
+				
 			</div>
 			{% endfor %}
 			<div class="col-2"></div>
@@ -19,42 +23,46 @@
 			<table>
 				<form action="">
 					<tr>
-    					<td>&nbsp;</td>
-    					<td>nom</td>
-    					<td>statut animal</td>
-    					<td>nature</td>
-    					<td>race</td>
-    					<td>propriétaire</td>
-    					<td>statut propriétaire</td>
-    					<td>tel</td>
-    					<td>num dossier</td>
-    					<td>num tatouage</td>
-    					<td>num puce</td>
-    				</tr>
+						<td>&nbsp;</td>
+						<td>nom</td>
+						<td>statut animal</td>
+						<td>espèce</td>
+						<td>race</td>
+						<td>propriétaire</td>
+						<td>statut propriétaire</td>
+						<td>tel</td>
+						<td>num dossier</td>
+						<td>num tatouage</td>
+						<td>num puce</td>
+					</tr>
 					{% for animal in animals %}
 					
+					
 					<tr class="col-12  {% cycle 'row1' 'row2' %}">
-			<!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
+						<!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
 						<td><input type="checkbox" id='{{animal.id}}'></td>
-						<td>{{animal.name}}</td>
+						<td>{{animal.name}}</a></td>
 						<td>{{animal.status}}</td>
-						<td>{{animal.nature}}</td>
+						<td>{{animal.species}}</td>
 						<td>{{animal.race}}</td>
 						<td>{{animal.owner}} </td>
 						<td>{{animal.owner_status}}</td>
 						<td>{{animal.owner_id.telephone}}</td>
 						<td>{{animal.admin_data_id.file}}</td>
 						<td>{{animal.admin_data_id.tatoo}}</td>
-						<td>{{animal.admin_data_id.chip}}</td>
-
-						
+						<td>{{animal.admin_data_id.chip}}</td>						
 					</tr>
-				{% endfor %}
+					{% endfor %}
 				</form>
 			</table>
 		</div>
 	</article>
 </article>
-</section>
+<script type="text/javascript">
+	function add(){
+		add_page = window.location + "add"
+		window.location.href = add_page; 
+	}
+</script>
 {% endblock  %}
 
