add sheet page works, error not handled

--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -58,6 +58,11 @@
 		</form>
 	</article>
 	<script type="text/javascript">
+		let true_radio = document.getElementById("id_is_neutered_0")
+		true_radio.checked = true
+		let species0 = document.getElementById("id_species_0")
+		species0.checked = true
+		
 	</script>
 	{% endblock  %}
 
