--- a/core/templates/core/nav.html
+++ b/core/templates/core/nav.html
@@ -12,10 +12,10 @@
 	</div>
 	<div class="container">
 		<div class="row">
-		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center"><a class="no-a" href="{% url 'mydashboard:index' %}">Tableau de bord</a></div>
-		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'sheet:index' %}">Fiches</a></div>
-		<div class=" col-12 text-center button-verti mb-3 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'mail:index' %}">Mails</a></div>
-		<div class=" col-12 text-center button-verti mb-5 d-flex align-items-center justify-content-center "><a class="no-a" href="{% url 'info:index' %}">Informations</a>	</div>
+		<div class=" col-12 text-center button-verti mb-3 very-center"><a class="no-a" href="{% url 'mydashboard:index' %}">Tableau de bord</a></div>
+		<div class=" col-12 text-center button-verti mb-3 very-center "><a class="no-a" href="{% url 'sheet:index' %}">Fiches</a></div>
+		<div class=" col-12 text-center button-verti mb-3 very-center "><a class="no-a" href="{% url 'mail:index' %}">Mails</a></div>
+		<div class=" col-12 text-center button-verti mb-5 very-center "><a class="no-a" href="{% url 'info:index' %}">Informations</a>	</div>
 		</div>
 	</div>
 </nav>
