--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -3,7 +3,8 @@
 <section>
 	<h2 class="mt-5 pl-5">Page Fiches</h2>
 	<article class="mt-5 bg-blue">
-		<form class="sheet" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+		<form class="sheet" action="" method="post" enctype="multipart/form-data">
+			{% csrf_token %}
 			<div class="container">
 				<div class="row">
 					<div class="col-8 bg-yellow container">
