--- a/mail/templates/mail/settings.html
+++ b/mail/templates/mail/settings.html
@@ -1,26 +1,109 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section>
+	<h4><a href="{% url 'mail:cns'%}">< Retour</a></h4>
 	<h2 class="mt-5 pl-5">règle d'envoi</h2>
 	<article class="mt-5 container">
 		<div class="row">
-			<div class="col-3 bg-secondary"></div>
-			<div class="col-6">
-				<div class="w-100 mt-5 text-center bg-primary very-center cns-choice" id="content">Contenu du mail </div>
-				<div class="w-100 mb-5 mt-5 text-center bg-primary cns-choice very-center" id="settings">Règle d'envoi </div>
+			<div class="col-1 bg-secondary"></div>
+			<div class="col-10">
+				<div class="w-100 mt-5 mb-5 text-center bg-tomato very-center cns-choice " id="auto">Je ne souhaite pas envoyer ce mail automatiquement ... </div>
+				<form action="" method="post" id='formSettings' class="d-none">{% csrf_token %}
+					<div class="row">
+						<div class="col-10 bg-tomato">{{form.frequency}}</div>
+						<div class="col-2">
+							<input type="submit"class="btn btn-primary big-btn" value="Enregistrer">
+							<p id="verif"></p>
+						</div>
+					</div>
+				</form>
+
 			</div>
-			<div class="col-3 bg-secondary"></div>
+			<div class="col-1 bg-secondary"></div>
 
 		</div>
 	</article>
 	<script type="text/javascript">
-		content = document.getElementById('content')
-		settings = document.getElementById('settings')
+		const auto = document.getElementById('auto')
+		const formSettings = document.getElementById('formSettings')
+		const colors = ['green', 'tomato'];
+		let count = 0
+		const appearChoice = function(){
+			auto.textContent = "Je souhaite envoyer ce mail automatiquement ..."
+			formSettings.classList.remove("d-none");
+			formSettings.classList.add("d-flex");
+		}
+		const disappearChoice = function(){
+			auto.textContent = "Je ne souhaite pas envoyer ce mail automatiquement."
+			formSettings.classList.remove("d-flex");
+			formSettings.classList.add("d-none");
+		}
 
-		content.addEventListener('click', function(){
-			window.href.location = "{% url 'mail:content'%}"})
-		settings.addEventListener('click', function(){
-			window.href.location = "{% url 'mail:settings'%}"})
+		auto.onclick = function () {
+			if (count == 0){
+				appearChoice();
+				count = 1;
+			}
+			else if (count == 1){
+				disappearChoice();
+				count = 0;
+			}
+			color = colors.shift();
+			colors.push(color);
+			auto.style.backgroundColor = color;
+		};
+		//****** additionnal input 
+		inputMonth = document.getElementById('id_frequency_2')
+		inputMonth.parentNode.innerHTML = '<input type="radio" name="frequency" value="3" required="" id="id_frequency_2"> quand l\'animal a plus de {{form.age}} mois.</input>'
+		ageField =  document.getElementById('id_age')
+		ageField.style.width="5rem"
+		const butt1 = ageField.previousSibling.previousElementSibling
+		ageField.onclick = () => {
+			butt1.checked = true
+		}
+		//******
+		inputDate = document.getElementById('id_frequency_3')
+		inputDate.parentNode.innerHTML = '<input type="radio" name="frequency" value="4" required="" id="id_frequency_2"> à la date du {{form.date}}</input>'
+		dateField =  document.getElementById('id_date')
+		dateField.style.width="8rem"
+		dateField.placeholder="jj/mm/aaaa"
+		const butt2 = dateField.previousSibling.previousElementSibling
+		dateField.onclick = () => {
+			console.log(inputDate)
+			butt2.checked = true
+		}
+		//******ctrl before send form
+		formSettings.addEventListener("submit", function (e) {
+			//check the mail
+			let verif = document.getElementById('verif')
+			console.log('but3 : ',butt1.checked);
+			console.log('but4 : ',butt2.checked);
+			if (butt1.checked){
+				if (ageField.value > 0 ){
+			    	console.log('changements pris en compte')
+				} else{
+					console.log('age :', ageField.value)
+				    verif.textContent = "rempli l'âge du champ en rouge";
+				    ageField.style.border = "2px red solid";
+				    ageField.style.color = "red";
+				    e.preventDefault()
+				}
+			}
+			else if (butt2.checked){
+				const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
+				if (regex_date.test(dateField.value)){
+			    	console.log('changements pris en compte')
+				} else{
+					verifText = dateField.value + " n'est pas une date au format jj/mm/aaa"
+				    verif.textContent = verifText ;
+				    dateField.style.border = "2px red solid";
+				    dateField.style.color = "red";
+				    e.preventDefault();
+				}
+			}
+	    })
+
+
 	</script>
 </section>
 {% endblock%}
