--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section>
-	<h2 class="mt-5 pl-5">Page Ajout Fiche</h2>
+	<h2 class="mt-5 pl-5">Page Modification Fiche</h2>
 	<article class="mt-5 bg-blue">
 		<form class="sheet" action="" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
