--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -8,12 +8,7 @@
 			<div class="col-2"></div>
 			{% for elem in button_value %}
 			<div class="col-2 bg-primary text-center">
-				{% if elem.name == "ajouter"%}
-				<button id="{{elem.id}}" onclick="add()">{{elem.name}}</button>
-				{% else%}
-				<button id="{{elem.id}}">{{elem.name}}</button>
-				{% endif%}
-				
+				<button id="{{elem.id}}" onclick="{{elem.function}}">{{elem.name}}</button>
 			</div>
 			{% endfor %}
 			<div class="col-2"></div>
@@ -38,7 +33,7 @@
 					{% for sheet in sheets %}
 					<tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
 						<!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
-						<td><input type="checkbox" id='{{sheet.id}}'></td>
+						<td><input type="checkbox" id='{{sheet.animal_id}}'></td>
 						<td>{{sheet.name}}</a></td>
 						<td>{{sheet.status}}</td>
 						<td>{{sheet.species}}</td>
@@ -60,6 +55,32 @@
 	function add(){
 		add_page = window.location + "add"
 		window.location.href = add_page; 
+	}
+	function alter(){
+		//verification only 1 sheet selected
+		checkbox = document.querySelectorAll('input[type=checkbox]');
+		count = 0; 
+		for (i=0; i < checkbox.length; i ++){
+			console.log(count)
+			if (checkbox[i].checked){
+				console.log('+1')
+				count ++;}
+		}
+		if (count == 0){
+			alert('sélectionnez une fiche à modifier !')
+		}else if (count == 1){
+			add_page = window.location + "alter";
+			window.location.href = add_page; 
+		}else{
+			alert("trop de fiches sélectionnées (" + count + ").")
+		}
+
+	}
+	function classify(){
+		alert('classify') 
+	}
+	function drop(){
+		alert('drop') 
 	}
 </script>
 {% endblock  %}
