find + correct bug in us2 about owner and duplicate values

--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -118,3 +118,13 @@
 		cursor: pointer; 
 		font-weight: bold;
 	}
+	.li-oneline{
+		white-space:nowrap;
+		padding-left: 0;
+		margin-bottom: 0; 
+		margin-top: 0.4rem;
+	}
+	.li-oneline li{ 
+		display:inline;
+		margin: 1rem; 
+	} 
