--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -38,8 +38,12 @@
 							<div class="col-4">{{form.tel_reminder}}</div>
 						</div>
 						<div class="row">
-							<div class="col-4">{{form.owner}}</div>
-							<div class="col-4">{{form.tel}}</div>
+							<div class="col-4">{{form.owner_name}}</div>
+							<div class="col-4">{{form.owner_surname}}</div>
+							<div class="col-4">{{form.owner_sexe}}</div>
+						</div>
+						<div class="row">
+							<div class="col-4">{{form.phone}}</div>
 							<div class="col-4">{{form.mail}}</div>
 						</div>
 					</div>			
