--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -57,19 +57,19 @@
 		window.location.href = add_page; 
 	}
 	function alter(){
-		//verification only 1 sheet selected
+		//check whether only 1 sheet is selected
 		checkbox = document.querySelectorAll('input[type=checkbox]');
 		count = 0; 
 		for (i=0; i < checkbox.length; i ++){
 			console.log(count)
 			if (checkbox[i].checked){
-				console.log('+1')
+				id_selected = checkbox[i].id
 				count ++;}
 		}
 		if (count == 0){
 			alert('sélectionnez une fiche à modifier !')
 		}else if (count == 1){
-			add_page = window.location + "alter";
+			add_page = window.location + "alter/"+ id_selected;
 			window.location.href = add_page; 
 		}else{
 			alert("trop de fiches sélectionnées (" + count + ").")
