--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -20,7 +20,7 @@
 					<tr>
 						<td>&nbsp;</td>
 						<td>nom</td>
-						<td>statut animal</td>
+						<td>statut stérilisation</td>
 						<td>espèce</td>
 						<td>race</td>
 						<td>propriétaire</td>
@@ -35,7 +35,7 @@
 						<!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
 						<td><input type="checkbox" id='{{sheet.animal_id}}'></td>
 						<td>{{sheet.name}}</a></td>
-						<td>{{sheet.status}}</td>
+						<td>{{sheet.admin_data.is_neutered}}</td>
 						<td>{{sheet.species}}</td>
 						<td>{{sheet.race}}</td>
 						<td>{{sheet.owner}} </td>
