--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -69,6 +69,7 @@
 		</form>
 	</article>
 	<script type="text/javascript">
+
 		let true_radio = document.getElementById("id_is_neutered_0");
 		true_radio.checked = true;
 		let species0 = document.getElementById("id_species_0");
@@ -113,8 +114,8 @@
 		//fills the inputs
 		function FillTheInputs(inputs){
 			// this functions fills the inputs with the given data from animal
-			values = ['{{animal.name}}','{{animal.date_of_birth}}','{{animal.date_of_adoption}}','{{animal.admin_data.date_of_neuter}}',
-			'{{animal.race}}', '{{animal.color}}', '{{animal.observation}}', "{{animal.admin_data.file}}", "{{animal.admin_data.chip}}", "{{animal.admin_data.tatoo}}", "{{animal.owner.caution}}", "{{animal.owner.tel_reminder}}","{{animal.owner.mail_reminder}}", "{{animal.owner.owner_name}}", "{{animal.owner.owner_surname}}", "{{animal.owner.phone}}", "{{animal.owner.mail}}" ]
+			values = ['{{animal.name}}','{{animal.date_of_birth|date:"d/m/Y"}}','{{animal.date_of_adoption|date:"d/m/Y"}}','{{animal.admin_data.date_of_neuter|date:"d/m/Y"}}',
+			'{{animal.race}}', '{{animal.color}}', '{{animal.observation}}', "{{animal.admin_data.file}}", "{{animal.admin_data.tatoo}}", "{{animal.admin_data.chip}}", "{{animal.owner.caution}}", "{{animal.owner.tel_reminder}}","{{animal.owner.mail_reminder}}", "{{animal.owner.owner_name}}", "{{animal.owner.owner_surname}}", "{{animal.owner.phone}}", "{{animal.owner.mail}}" ]
 			for (i=0; i <= values.length; i++){
 				inputs[i].value = values[i];
 			}
@@ -134,13 +135,12 @@
 			for (let choice of [choice1, choice2, choice3]){
 				for (let checkbox of checkboxes){
 					if (choice == checkbox.id){
-
 						a = checkbox
 						checkbox.checked = true;
 						if (checkbox.id == "id_is_neutered_2" ){
 							appearNewInput();
 							let newInput = document.getElementById('id_futur_date_of_neuter'); 
-							newInput.value ='{{animal.admin_data.futur_date_of_neuter}}'; 
+							newInput.value ='{{animal.admin_data.futur_date_of_neuter|date:"d/m/Y"}}'; 
 						}
 						break; 
 					}
