--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -1,102 +1,134 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section>
-	<h2 class="mt-5 pl-5">Page Fiches</h2>
-	<article class="mt-5 container">
-		{% csrf_token %} 
-		<div class="row">
-			<div class="col-2"></div>
-			{% for elem in button_value %}
-			<div class="col-2 bg-primary text-center">
-				<button id="{{elem.id}}" onclick="{{elem.function}}">{{elem.name}}</button>
-			</div>
-			{% endfor %}
-			<div class="col-2"></div>
-			<div class="col-12 mb-5 text-center">
-				<button>imprimer</button>
-			</div>
-			<table>
-				<form action="">
-					<tr>
-						<td>&nbsp;</td>
-						<td>nom</td>
-						<td>statut stérilisation</td>
-						<td>espèce</td>
-						<td>race</td>
-						<td>propriétaire</td>
-						<td>statut propriétaire</td>
-						<td>tel</td>
-						<td>num dossier</td>
-						<td>num tatouage</td>
-						<td>num puce</td>
-					</tr>
-					{% for sheet in sheets %}
-					<tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
-						<!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
-						<td><input type="checkbox" id='{{sheet.animal_id}}'></td>
-						<td>{{sheet.name}}</a></td>
-						<td>{{sheet.admin_data.is_neutered}}</td>
-						<td>{{sheet.species}}</td>
-						<td>{{sheet.race}}</td>
-						<td>{{sheet.owner}} </td>
-						<td>{{sheet.owner_status}}</td>
-						<td>{{sheet.owner.phone}}</td>
-						<td>{{sheet.admin_data.file}}</td>
-						<td>{{sheet.admin_data.tatoo}}</td>
-						<td>{{sheet.admin_data.chip}}</td>						
-					</tr>
-					{% endfor %}
-				</form>
-			</table>
-		</div>
-	</article>
-</article>
-<script type="text/javascript">
+    <h2 class="mt-5 pl-5">Page Fiches</h2>
+    <article class="mt-5 container">
+        <div class="row">
+            <div class="col-2"></div>
+            {% for elem in button_value %} <!-- affiche les boutons -->
+            <div class="col-2 bg-primary text-center">
+                <button id="{{elem.id}}" onclick="{{elem.function}}">{{elem.name}}</button>
+            </div>
+            {% endfor %}
+            <div class="col-2"></div>
+            <div class="col-12 mb-5 text-center">
+                <button>imprimer</button>
+            </div>
+            <form id="my_form" action="" method="" name="my_form">
+                {% csrf_token %} 
+                <table>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>nom</td>
+                        <td>statut stérilisation</td>
+                        <td>espèce</td>
+                        <td>race</td>
+                        <td>propriétaire</td>
+                        <td>statut propriétaire</td>
+                        <td>tel</td>
+                        <td>num dossier</td>
+                        <td>num tatouage</td>
+                        <td>num puce</td>
+                    </tr>
+                    {% for sheet in sheets %}
+                    <tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
+                        <!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
+                        <td><input type="checkbox" id='{{sheet.animal_id}}' name='checkbox' value={{sheet.animal_id}}></td>
+                        <td>{{sheet.name}}</a></td>
+                        <td>{{sheet.admin_data.is_neutered}}</td>
+                        <td>{{sheet.species}}</td>
+                        <td>{{sheet.race}}</td>
+                        <td>{{sheet.owner}} </td>
+                        <td>{{sheet.owner_status}}</td>
+                        <td>{{sheet.owner.phone}}</td>
+                        <td>{{sheet.admin_data.file}}</td>
+                        <td>{{sheet.admin_data.tatoo}}</td>
+                        <td>{{sheet.admin_data.chip}}</td>                      
+                    </tr>
+                    {% endfor %}
+                </table>
+            </form>
+        </div>
+    </article>
+    <script type="text/javascript">
+    const form = document.getElementById('my_form');
+    //click on line means checkbox checked
+    let allTr = Array.from(document.querySelectorAll('tr')).slice(1); 
+    for (tr of allTr){
+        tr.style.cursor = 'pointer'; 
+        tr = Array.from(tr.children)
+        tr.splice(0,1)
+        for (child of tr){
+            child.addEventListener('click', function(e){
+                let target = e.target.parentElement.children[0].firstChild;
+                console.log(e.target.tagName)
+                if (target.checked == true){
+                    target.checked=false; 
+                }else{
+                    target.checked=true;
+                }
+            });
+        }
+    }
 
-	//click on line means checkbox checked
-	let allTr = Array.from(document.querySelectorAll('tr')).slice(1); 
-	for (tr of allTr){
-		tr.style.cursor = 'pointer'; 
-		tr.addEventListener('click', function(e){
-			console.log(e.target.parentElement.children[0].firstChild.checked)
-			if (e.target.parentElement.children[0].firstChild.checked){
-				e.target.parentElement.children[0].firstChild.checked=false; 
-			}else{
-				e.target.parentElement.children[0].firstChild.checked=true;
-			}
-		});
-	}
+    function add(){
+        add_page = window.location + "add"
+        window.location.href = add_page; 
+    }
+    function alter(){
+        //check whether only 1 sheet is selected
+        checkbox = document.querySelectorAll('input[type=checkbox]');
+        count = 0; 
+        for (i=0; i < checkbox.length; i ++){
+            console.log(count)
+            if (checkbox[i].checked){
+                id_selected = checkbox[i].id
+                count ++;}
+            }
+            if (count == 0){
+                alert('sélectionnez une fiche à modifier !')
+            }else if (count == 1){
+                add_page = window.location + "alter/"+ id_selected;
+                window.location.href = add_page; 
+            }else{
+                alert("trop de fiches sélectionnées (" + count + ").")
+            }
 
-	function add(){
-		add_page = window.location + "add"
-		window.location.href = add_page; 
-	}
-	function alter(){
-		//check whether only 1 sheet is selected
-		checkbox = document.querySelectorAll('input[type=checkbox]');
-		count = 0; 
-		for (i=0; i < checkbox.length; i ++){
-			console.log(count)
-			if (checkbox[i].checked){
-				id_selected = checkbox[i].id
-				count ++;}
-		}
-		if (count == 0){
-			alert('sélectionnez une fiche à modifier !')
-		}else if (count == 1){
-			add_page = window.location + "alter/"+ id_selected;
-			window.location.href = add_page; 
-		}else{
-			alert("trop de fiches sélectionnées (" + count + ").")
-		}
-
-	}
-	function classify(){
-		alert('classify') 
-	}
-	function drop(){
-		alert('drop') 
-	}
+        }
+        function classify(){
+            alert('classify') 
+        }
+    function drop(){
+        const checkbox = document.querySelectorAll('input[type=checkbox]');
+        let count = 0; 
+        let toDelete = []
+        for (i=0; i < checkbox.length; i ++){
+            if (checkbox[i].checked){
+                toDelete.push(checkbox[i])
+                count ++;
+            }
+        }
+        if (count == 0){
+            alert('sélectionnez au moins une fiche à supprimer !')
+        }else {
+            ToDelete = Array.from(toDelete)
+            let msg = 'Confirmez-vous la suppression de '+ count + ' éléments :'
+            let name = ""
+            let specie = ""
+            for (let elem of toDelete){
+                name = elem.parentElement.nextElementSibling.textContent
+                specie = elem.parentElement.nextElementSibling.nextElementSibling.nextElementSibling.textContent
+                msg = msg + "\n  >" + name + " - " + specie;
+            }
+            let response = confirm(msg);
+            if (response){
+                form.setAttribute('action', "{% url 'sheet:index'%}");
+                form.setAttribute('method', "POST");
+                form.submit()
+            }
+        }
+        form.setAttribute('action', "");
+    }
 </script>
 {% endblock  %}
 
